--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>www.ProgrammingCompany.com</title>
+    <title> Lionel Messi </title>
 </head>
 <body>
-    What's up bro!
+    <h1> Leo Messi alias La Pulga</h1>
+    <img src="img/lionel.jpg">
 </body>
 </html>
